fix: skip alt attribute scanning if no images found

--- a/src/panel/translations/assessments/de.json
+++ b/src/panel/translations/assessments/de.json
@@ -1,16 +1,20 @@
 {
   "AltAttributeAssessment": {
-    "none": "Alt-Attribut für Bilder: Keines der {imagesWithoutAltAttribute} Bilder enthält ein Attribut für alternativen Text. Fügen Sie sie hinzu!",
-    "some": "Alt-Attribut für Bilder: Einige der {imagesWithoutAltAttribute} Bilder enthalten ein Attribut für alternativen Text. Fügen Sie sie hinzu!",
-    "every": "Alt-Attribut für Bilder: Alle Bilder enthalten ein Attribut für alternativen Text. Gute Arbeit!"
+    "_label": "Alt-Attribut für Bilder",
+    "na": "Der Text enthält keine Bilder.",
+    "none": "Keines der {imagesWithoutAltAttribute} Bilder enthält ein Attribut für alternativen Text. Fügen Sie sie hinzu!",
+    "some": "Einige der {imagesWithoutAltAttribute} Bilder enthalten ein Attribut für alternativen Text. Fügen Sie sie hinzu!",
+    "every": "Alle Bilder enthalten ein Attribut für alternativen Text. Gute Arbeit!"
   },
   "HeadingStructureOrderAssessment": {
-    "sequential": "Reihenfolge der Überschriften: Die Überschriftenstruktur ist in sequenzieller Reihenfolge. Gute Arbeit!",
-    "nonSequential": "Reihenfolge der Überschriften: Die Überschriftenstruktur ist nicht in sequenzieller Reihenfolge. Korrigieren Sie Ihre Überschriftenstruktur!"
+    "_label": "Reihenfolge der Überschriften",
+    "sequential": "Die Überschriftenstruktur ist in sequenzieller Reihenfolge. Gute Arbeit!",
+    "nonSequential": "Die Überschriftenstruktur ist nicht in sequenzieller Reihenfolge. Korrigieren Sie Ihre Überschriftenstruktur!"
   },
   "SingleH1Assessment": {
-    "one": "Einzelne H1: Der Text enthält einen H1-Tag. Gute Arbeit!",
-    "multiple": "Einzelne H1: Der Text enthält mehrere H1-Tags. Überdenken Sie Ihre Überschriftenstruktur!",
-    "none": "Einzelne H1: Der Text enthält keinen H1-Tag. Fügen Sie ihn hinzu!"
+    "_label": "Einzelne H1",
+    "one": "Der Text enthält einen H1-Tag. Gute Arbeit!",
+    "multiple": "Der Text enthält mehrere H1-Tags. Überdenken Sie Ihre Überschriftenstruktur!",
+    "none": "Der Text enthält keinen H1-Tag. Fügen Sie ihn hinzu!"
   }
 }
