--- a/src/panel/translations/yoastseo/nl.json
+++ b/src/panel/translations/yoastseo/nl.json
@@ -160,9 +160,7 @@
   "%1$sNot enough content%2$s: %3$sPlease add some content to enable a good analysis%2$s.": [
     "%1$sNiet genoeg inhoud%2$s: %3$sVoeg wat inhoud toe om een goede analyse mogelijk te maken%2$s."
   ],
-  "%1$sOutbound links%2$s: Good job!": [
-    "%1$sExterne links%2$s: Goed werk!"
-  ],
+  "%1$sOutbound links%2$s: Good job!": ["%1$sExterne links%2$s: Goed werk!"],
   "%1$sOutbound links%2$s: There are both nofollowed and normal outbound links on this page. Good job!": [
     "%1$sExterne links%2$s: Er zijn zowel nofollow als normale externe links op deze pagina. Goed werk!"
   ],
@@ -191,9 +189,7 @@
   "%1$sSentence length%2$s: %3$s of the sentences contain more than %4$s words, which is more than the recommended maximum of %5$s. %6$sTry to shorten the sentences%2$s.": [
     "%1$sZinslengte%2$s: %3$s van de zinnen bevatten meer dan %4$s woorden, wat meer is dan het aanbevolen maximum van %5$s. %6$sProbeer de zinnen in te korten%2$s."
   ],
-  "%1$sSentence length%2$s: Great!": [
-    "%1$sZinslengte%2$s: Geweldig!"
-  ],
+  "%1$sSentence length%2$s: Great!": ["%1$sZinslengte%2$s: Geweldig!"],
   "%1$sSEO title width%2$s: Good job!": [
     "%1$sSEO-titelbreedte%2$s: Goed werk!"
   ],
@@ -271,99 +267,45 @@
   "An error occurred in the '%1$s' assessment": [
     "Er is een fout opgetreden tijdens de '%1$s'-audit."
   ],
-  "Close snippet editor": [
-    "Snippet-editor sluiten"
-  ],
-  "Content optimization:": [
-    "Inhoudoptimalisatie:"
-  ],
-  "Desktop preview": [
-    "Desktopvoorbeeld"
-  ],
-  "difficult": [
-    "moeilijk"
-  ],
-  "easy": [
-    "makkelijk"
-  ],
-  "Edit snippet": [
-    "Snippet bewerken"
-  ],
-  "fairly difficult": [
-    "tamelijk moeilijk"
-  ],
-  "fairly easy": [
-    "tamelijk makkelijk"
-  ],
-  "Feedback": [
-    "Feedback"
-  ],
-  "Good": [
-    "Goed"
-  ],
-  "Good job!": [
-    "Goed gedaan!"
-  ],
-  "Good SEO score": [
-    "Goede SEO-score"
-  ],
-  "Google preview": [
-    "Google-voorbeeld"
-  ],
-  "Has feedback": [
-    "Heeft feedback"
-  ],
-  "Mark this result in the text": [
-    "Markeer dit resultaat in de tekst"
-  ],
+  "Close snippet editor": ["Snippet-editor sluiten"],
+  "Content optimization:": ["Inhoudoptimalisatie:"],
+  "Desktop preview": ["Desktopvoorbeeld"],
+  "difficult": ["moeilijk"],
+  "easy": ["makkelijk"],
+  "Edit snippet": ["Snippet bewerken"],
+  "fairly difficult": ["tamelijk moeilijk"],
+  "fairly easy": ["tamelijk makkelijk"],
+  "Feedback": ["Feedback"],
+  "Good": ["Goed"],
+  "Good job!": ["Goed gedaan!"],
+  "Good SEO score": ["Goede SEO-score"],
+  "Google preview": ["Google-voorbeeld"],
+  "Has feedback": ["Heeft feedback"],
+  "Mark this result in the text": ["Markeer dit resultaat in de tekst"],
   "Marks are disabled in current view": [
     "Markeringen zijn in de huidige weergave uitgeschakeld"
   ],
-  "Meta description": [
-    "metabeschrijving"
-  ],
-  "Meta description preview:": [
-    "Voorbeeld van metabeschrijving:"
-  ],
-  "Mobile preview": [
-    "Mobiel voorbeeld"
-  ],
-  "Needs improvement": [
-    "Moet verbeterd worden"
-  ],
-  "ok": [
-    "ok"
-  ],
-  "OK": [
-    "OK"
-  ],
-  "OK SEO score": [
-    "OK SEO-score"
-  ],
+  "Meta description": ["metabeschrijving"],
+  "Meta description preview:": ["Voorbeeld van metabeschrijving:"],
+  "Mobile preview": ["Mobiel voorbeeld"],
+  "Needs improvement": ["Moet verbeterd worden"],
+  "ok": ["ok"],
+  "OK": ["OK"],
+  "OK SEO score": ["OK SEO-score"],
   "Please provide a meta description by editing the snippet below.": [
     "Geef een metabeschrijving door de onderstaande snippet te bewerken."
   ],
   "Please provide an SEO title by editing the snippet below.": [
     "Geef een SEO-titel door de onderstaande snippet te bewerken."
   ],
-  "Remove marks in the text": [
-    "Markeringen in de tekst verwijderen"
-  ],
+  "Remove marks in the text": ["Markeringen in de tekst verwijderen"],
   "Scroll to see the preview content.": [
     "Scroll om de voorbeeldinhoud te zien."
   ],
-  "SEO title": [
-    "SEO-titel"
-  ],
-  "SEO title preview:": [
-    "SEO-titel voorbeeld:"
-  ],
-  "Slug": [
-    "Slug"
-  ],
-  "Slug preview:": [
-    "Slug-voorbeeld:"
-  ],
+  "SEO title": ["SEO-titel"],
+  "SEO title preview:": ["SEO-titel voorbeeld:"],
+  "Slug": ["Slug"],
+  "Slug preview:": ["Slug-voorbeeld:"],
   "The meta description contains %1$d sentence %2$sover %3$s words%4$s. Try to shorten this sentence.": [
     "De metabeschrijving bevat %1$d zin %2$smet meer dan %3$s woorden%4$s. Probeer deze zin in te korten.",
     "De metabeschrijving bevat %1$d zinnen %2$smet meer dan %3$s woorden%4$s. Probeer deze zinnen in te korten."
@@ -389,12 +331,8 @@
   "Try to make shorter sentences, using less difficult words to improve readability": [
     "Probeer kortere zinnen te maken en minder moeilijke woorden te gebruiken om de leesbaarheid te verbeteren"
   ],
-  "very difficult": [
-    "zeer moeilijk"
-  ],
-  "very easy": [
-    "zeer makkelijk"
-  ],
+  "very difficult": ["zeer moeilijk"],
+  "very easy": ["zeer makkelijk"],
   "You can click on each element in the preview to jump to the Snippet Editor.": [
     "Je kan op elk element in de preview klikken om naar de Snippet-editor te gaan."
   ]
