--- a/src/panel/translations/assessments/nl.json
+++ b/src/panel/translations/assessments/nl.json
@@ -1,17 +1,17 @@
 {
-  "AltAttributeAssessment": {
+  "altAttribute": {
     "_label": "Alt-tekst voor afbeeldingen",
     "na": "De tekst bevat geen afbeeldingen.",
     "none": "Geen van de {imagesWithoutAltAttribute} afbeeldingen bevat alt-tekst. Voeg ze toe!",
     "some": "Sommige van de {imagesWithoutAltAttribute} afbeeldingen bevatten alt-tekst. Voeg ze toe!",
     "every": "Alle afbeeldingen bevatten alt-tekst. Goed gedaan!"
   },
-  "HeadingStructureOrderAssessment": {
+  "headingStructureOrder": {
     "_label": "Kopstructuur volgorde",
     "sequential": "De kopstructuur is in opeenvolgende volgorde. Goed gedaan!",
     "nonSequential": "De kopstructuur is niet in opeenvolgende volgorde. Corrigeer je kopstructuur!"
   },
-  "SingleH1Assessment": {
+  "singleH1": {
     "_label": "Enkele H1",
     "one": "De tekst bevat één H1-tag. Goed gedaan!",
     "multiple": "De tekst bevat meerdere H1-tags. Herzie je kopstructuur!",
